--- a/kingWeb/kingWeb/templates/adm/shared/layout_content.html
+++ b/kingWeb/kingWeb/templates/adm/shared/layout_content.html
@@ -11,6 +11,11 @@
     <script src="{%static 'lib/jquery-validation/dist/jquery.validate.min.js' %}"></script>
     <script src="{%static 'lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js' %}"></script>
 
+    <!--Ztree-->
+    <link href="{% static 'lib/zTree/css/metroStyle/metroStyle.css' %}" rel="stylesheet" />
+    <script src="{% static 'lib/zTree/js/jquery.ztree.core.js' %}"></script>
+    <script src="{% static 'lib/zTree/js/jquery.ztree.excheck.js' %}"></script>
+
     <!--Bootstrap-->
     <script src="{%static 'lib/bootstrap/dist/js/bootstrap.js' %}"></script>
     <link href="{%static 'lib/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet" />
