--- a/kingWeb/kingWeb/templates/adm/user/edit.html
+++ b/kingWeb/kingWeb/templates/adm/user/edit.html
@@ -14,41 +14,56 @@
 {% endblock %}
 
 {% block content %}
-<form class="form-horizontal" action="@Url.Action("Edit");" method="post" id="lkForm">
-    @Html.HiddenFor(item => item.Id, new { @class = "form-control" })
-    @Html.HiddenFor(item => item.ConcurrencyStamp, new { @class = "form-control" })
-    @Html.HiddenFor(item => item.SecurityStamp, new { @class = "form-control" })
-    @Html.AntiForgeryToken()
+<form class="form-horizontal" action="/adm/user/post_edit/" method="post" id="lkForm">
+ <input type="hidden"  name="Id" value="{{id}}" />
+    {%csrf_token%}
     <div class="form-group">
         <label class="col-md-3 control-label">用户名</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" id="txtUserName" name="UserName" asp-for="UserName"
+            <input type="text" class="form-control" id="txtUserName" name="UserName" value="{{username}}"
                    data-val="true" data-val-maxlength="用户名长度不能超过20个字符" data-val-maxlength-max="20"
                    data-val-minlength="用户名长度不能少于2个字符" data-val-minlength-min="2" data-val-required="用户名不能为空" />
             <span class="field-validation-valid" data-valmsg-for="UserName" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
-        <label class="col-md-3 control-label">姓名</label>
+        <label class="col-md-3 control-label">姓</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" id="txtRealName" name="RealName" asp-for="RealName"
-                   data-val="true" data-val-maxlength="姓名长度不能超过8个字符" data-val-maxlength-max="8"
-                   data-val-minlength="姓名长度不能少于2个字符" data-val-minlength-min="2" data-val-required="姓名不能为空" />
+            <input type="text" class="form-control" name="LastName" value="{{lastname}}"
+                   data-val="true" data-val-maxlength="姓长度不能超过8个字符" data-val-maxlength-max="8"
+              data-val-required="姓名不能为空" />
+            <span class="field-validation-valid" data-valmsg-for="RealName" data-valmsg-replace="true"></span>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-md-3 control-label">名</label>
+        <div class="col-md-7">
+            <input type="text" class="form-control" name="FirstName" value="{{firstname}}"
+                   data-val="true" data-val-maxlength="名长度不能超过8个字符" data-val-maxlength-max="8"
+                   data-val-required="姓名不能为空" />
             <span class="field-validation-valid" data-valmsg-for="RealName" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-3 control-label">邮箱</label>
         <div class="col-md-7">
-            <input type="email" class="form-control" id="txtEmail" name="Email" asp-for="Email"
+            <input type="email" class="form-control" id="txtEmail" name="Email" value="{{email}}"
                    data-val-required="邮箱不能为空" data-val="true" />
             <span class="field-validation-valid" data-valmsg-for="Email" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
+        <label class="col-md-3 control-label">旧密码</label>
+        <div class="col-md-7">
+            <input type="password" class="form-control" id="txtNewPwd" name="OldPassword"
+                   data-val="true" data-val-maxlength="密码长度不能超过20个字符" data-val-maxlength-max="20" />
+            <span class="field-validation-valid" data-valmsg-for="OldPassword" data-valmsg-replace="true"></span>
+        </div>
+    </div>
+    <div class="form-group">
         <label class="col-md-3 control-label">新密码</label>
         <div class="col-md-7">
-            <input type="password" class="form-control" id="txtNewPwd" name="Password"
+            <input type="password" class="form-control" id="txtNewPwd" name="Password" value="{{password}}"
                    data-val="true" data-val-maxlength="密码长度不能超过20个字符" data-val-maxlength-max="20" />
             <span class="field-validation-valid" data-valmsg-for="Password" data-valmsg-replace="true"></span>
         </div>
@@ -61,12 +76,15 @@
             <span class="field-validation-valid" data-valmsg-for="PasswordAgain" data-valmsg-replace="true"></span>
         </div>
     </div>
-    <div class="form-group">
+    <!--<div class="form-group">
         <label class="col-md-3 control-label">状态</label>
         <div class="col-md-7">
-            @Html.DropDownListFor(x => x.Status, (SelectList)ViewBag.StatusList, new { @class = "form-control" })
+           <select name="Status" class="form-control">
+               <option value="1" {%ifequal status 1 %}selected {%endifequal%}>激活</option>
+               <option value="0" {%ifequal status 0 %}selected {%endifequal%}>未激活</option>
+           </select>
         </div>
-    </div>
+    </div>-->
 
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
