--- a/kingWeb/kingWeb/templates/adm/system_option/index.html
+++ b/kingWeb/kingWeb/templates/adm/system_option/index.html
@@ -36,7 +36,7 @@
 
         var lkTable;
         function InitDataTable() {
-            var dataUrl = '@Url.Action("GetPageData")';
+            var dataUrl = '/adm/systemoption/get_page_data/';
             var columns = [
                 {
                     "sClass": "text-center",
@@ -46,7 +46,7 @@
                     },
                     "bSortable": false
                 },
-                { "mData": "rowNum", "sClass": "text-center" },
+                { "mData": "rownum", "sClass": "text-center" },
                 { "mData": "code", "sClass": "text-center" },
                 { "mData": "value", "sClass": "text-center" }
             ];
@@ -70,7 +70,7 @@
         </span>
     </div>
 </div>
-@Html.AntiForgeryToken()
+{%csrf_token%}
 <table class="table table-striped table-hover" id="lkTable">
     <thead>
         <tr>
