--- a/kingWeb/kingWeb/templates/adm/user/add.html
+++ b/kingWeb/kingWeb/templates/adm/user/add.html
@@ -14,8 +14,8 @@
 
 
 {% block content %}
-<form class="form-horizontal" action="@Url.Action("Add", new { id = 0 })" method="post" id="lkForm">
-    @Html.AntiForgeryToken()
+<form class="form-horizontal" action="/adm/user/post_add/" method="post" id="lkForm">
+   {%csrf_token%}
     <div class="form-group">
         <label class="col-md-3 control-label">用户名</label>
         <div class="col-md-7">
@@ -26,11 +26,20 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="col-md-3 control-label">姓名</label>
+        <label class="col-md-3 control-label">姓</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" id="txtRealName" name="RealName"
-                   data-val="true" data-val-maxlength="姓名长度不能超过8个字符" data-val-maxlength-max="8"
-                   data-val-minlength="姓名长度不能少于2个字符" data-val-minlength-min="2" data-val-required="姓名不能为空" />
+            <input type="text" class="form-control" name="LastName"
+                   data-val="true" data-val-maxlength="姓长度不能超过8个字符" data-val-maxlength-max="8"
+                    data-val-required="姓名不能为空" />
+            <span class="field-validation-valid" data-valmsg-for="RealName" data-valmsg-replace="true"></span>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-md-3 control-label">名</label>
+        <div class="col-md-7">
+            <input type="text" class="form-control" name="FirstName"
+                   data-val="true" data-val-maxlength="名长度不能超过8个字符" data-val-maxlength-max="8"
+                   data-val-required="姓名不能为空" />
             <span class="field-validation-valid" data-valmsg-for="RealName" data-valmsg-replace="true"></span>
         </div>
     </div>
@@ -60,12 +69,15 @@
             <span class="field-validation-valid" data-valmsg-for="PasswordAgain" data-valmsg-replace="true"></span>
         </div>
     </div>
-    <div class="form-group">
+    <!--<div class="form-group">
         <label class="col-md-3 control-label">状态</label>
         <div class="col-md-7">
-            @Html.DropDownList("Status", (SelectList)ViewBag.StatusList, new { @class = "form-control" })
+           <select name="Status" class="form-control">
+               <option value="1">激活</option>
+               <option value="0">未激活</option>
+           </select>
         </div>
-    </div>
+    </div>-->
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
