--- a/kingWeb/kingWeb/templates/adm/table_column/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/edit.html
@@ -18,7 +18,7 @@
 
 <form class="form-horizontal" action="@Url.Action("Edit");" method="post" id="lkForm">
     @Html.HiddenFor(item => item.Id, new { @class = "form-control" })
-    @Html.AntiForgeryToken()
+    {%csrf_token%}
     <div class="form-group">
         <label class="col-md-2 control-label">所属表</label>
         <div class="col-md-4">
