--- a/kingWeb/kingWeb/templates/adm/table_column/index.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/index.html
@@ -157,7 +157,7 @@
         </span>
     </div>
 </div>
-@Html.AntiForgeryToken()
+{%csrf_token%}
 <table class="table table-striped table-hover" id="lkTable">
     <thead>
         <tr>
