--- a/kingWeb/kingWeb/templates/adm/table_list/index.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/index.html
@@ -104,7 +104,7 @@
         </span>
     </div>
 </div>
-@Html.AntiForgeryToken()
+{%csrf_token%}
 <table class="table table-striped table-hover" id="lkTable">
     <thead>
         <tr>
