--- a/kingWeb/kingWeb/templates/adm/user/add.html
+++ b/kingWeb/kingWeb/templates/adm/user/add.html
@@ -69,15 +69,16 @@
             <span class="field-validation-valid" data-valmsg-for="PasswordAgain" data-valmsg-replace="true"></span>
         </div>
     </div>
-    <!--<div class="form-group">
+    <div class="form-group">
         <label class="col-md-3 control-label">状态</label>
         <div class="col-md-7">
            <select name="Status" class="form-control">
-               <option value="1">激活</option>
-               <option value="0">未激活</option>
+             {% for item in statuslist%}
+                <option value="{{item.value}}">{{item.name}}</option>
+             {% endfor %}
            </select>
         </div>
-    </div>-->
+    </div>
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
