--- a/kingWeb/kingWeb/templates/adm/user/edit.html
+++ b/kingWeb/kingWeb/templates/adm/user/edit.html
@@ -76,15 +76,16 @@
             <span class="field-validation-valid" data-valmsg-for="PasswordAgain" data-valmsg-replace="true"></span>
         </div>
     </div>
-    <!--<div class="form-group">
+    <div class="form-group">
         <label class="col-md-3 control-label">状态</label>
         <div class="col-md-7">
-           <select name="Status" class="form-control">
-               <option value="1" {%ifequal status 1 %}selected {%endifequal%}>激活</option>
-               <option value="0" {%ifequal status 0 %}selected {%endifequal%}>未激活</option>
+           <select name="Status" class="form-control"  {%ifequal allow_modify_status 0%}disabled="disabled"{%endifequal%}>
+            {% for item in statuslist%}
+                <option value="{{item.value}}" {%ifequal status item.value %}selected {%endifequal%}>{{item.name}}</option>
+             {% endfor %}
            </select>
         </div>
-    </div>-->
+    </div>
 
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
