--- a/kingWeb/kingWeb/templates/adm/user/select_user.html
+++ b/kingWeb/kingWeb/templates/adm/user/select_user.html
@@ -4,7 +4,7 @@
 {% block scripts %}
     <script type="text/javascript">
         var table_user;
-        var departmentID = '@ViewBag.DepartmentID';
+        var departmentId = '{{departmentid}}';
         $(function () {
             $(".checkAll").click(function () {
                 var check = $(this).prop("checked");
@@ -14,23 +14,23 @@
             LoadDataTable();
         })
           function LoadDataTable() {
-            var dataUrl = '@Url.Action("GetListByNotDepartment")';
+            var dataUrl = '/adm/user/get_not_department_user/';
             var columns = [
                 {
                     "sClass": "text-center",
-                    "mData": "id",
+                    "mData": "user__id",
                     "mRender": function (data, type, row) {
                         return '<input type="checkbox" class="checkChild"  value="' + data + '" />';
                     },
                     "bSortable": false
                 },
-                { "mData": "rowNum", "sClass": "text-center" },
-                { "mData": "userName", "name": "LoginName", "sClass": "text-center" },
-                { "mData": "realName", "name": "RealName", "sClass": "text-center" },
-                { "mData": "email", "name": "Email","sClass": "text-center", "bSortable": false },
-                { "mData": "statusName", "name": "StatusName","sClass": "text-center" }
+                { "mData": "rownum", "sClass": "text-center" },
+                { "mData": "user__username",   "sClass": "text-center" },
+                { "mData": "realname",  "sClass": "text-center" },
+                { "mData": "user__email",  "sClass": "text-center", "bSortable": false },
+                { "mData": "status","sClass": "text-center" }
         ];
-            table_user = lkWeb.LoadTable("table_user", columns, dataUrl,departmentID)
+            table_user = lkWeb.LoadTable("table_user", columns, dataUrl,departmentId)
         }
           function Submit() {
               var ids = lkWeb.GetCheckValueList($(".checkChild"));
@@ -38,14 +38,14 @@
                   parent.layer.alert("请选择");
                   return;
               }
-              var dto = {};
-              dto.DepartmentID = departmentID;
-              dto.UserIDs = ids;
-              dto.csrfmiddlewaretoken=$("input[name='csrfmiddlewaretoken']").val();
               $.ajax({
                   type: "post",
-                  url: "@Url.Action("SetDepartment","User")",
-                  data: dto,
+                  url: "/adm/user/set_user_department/",
+                                       data: {
+                            UserIDs: ids,
+                           DepartmentId: departmentId,
+                            csrfmiddlewaretoken: $("input[name='csrfmiddlewaretoken']").val()
+                        },
                   dataType: "json",
                   async: false,
                   success: function (result) {
@@ -76,7 +76,7 @@
         <button type="button" class="btn btn-success" onclick="Submit()">确定</button>
         <button type="button" class="btn btn-danger" onclick="parent.SelectUser()">返回</button>
     </div>
-    @Html.AntiForgeryToken()
+    {%csrf_token%}
     <table class="table table-striped table-hover" id="table_user">
         <thead>
             <tr>
