--- a/kingWeb/kingWeb/templates/adm/vewList/add.html
+++ b/kingWeb/kingWeb/templates/adm/vewList/add.html
@@ -17,7 +17,7 @@
     </script>
 }
 <form class="form-horizontal" action="@Url.Action("Add",new { id = @Model.Table.Id })" method="post" id="lkForm">
-    @Html.AntiForgeryToken()
+    {%csrf_token%}
     @{
         string selectTpl = "<div class=\"form-group\"><div class=\"\">" +
     "<label class=\"col-md-2 control-label\">{0}</label>" +
