--- a/kingWeb/kingWeb/templates/adm/vewList/index.html
+++ b/kingWeb/kingWeb/templates/adm/vewList/index.html
@@ -226,7 +226,7 @@
         </span>
     </div>
 </div>
-@Html.AntiForgeryToken()
+{%csrf_token%}
 <table class="table table-striped table-hover" id="lkTable">
     <thead>
         <tr>
